# jellyshuf

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  setup.cfg  setup.py
src/jellyshuf/: __init__.py  base.py  data.py  jellyfin.py  settings.py  shared.py  sonic.py
