[metadata]
name = jellyshuf  
version = 0.1.1
author = Ethan Djeric
author_email = ethan@ethandjeric.com 
description = Randomly add items to mpd queue from jellyfin (use in tandem with mopidy-jellyfin)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deafmute1/randjmpd
project_urls =
    Bug Tracker = https://github.com/deafmute1/randjmpd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src 
packages = find:
python_requires = >=3.8 
install_requires =
    requests
    python-musicpd
    appdirs

[options.packages.find]
where = src 

[options.entry_points]
console_scripts = 
    jellyshuf = jellyshuf:cli